--- a/index.html
+++ b/index.html
@@ -9,41 +9,8 @@
 </head>
 
 <body>
-
-  <main class="game container">
-
-    <header>
-      <div class="score">
-        <span class="label">Score:</span>
-        <span class="value">203</span>
-      </div>
-      <div class="timer">
-        <span class="label">Time left:</span>
-        <span class="value">3</span>
-      </div>
-    </header>
-
-    <div class="deck">
-      <div class="card current-card">5</div>
-      <div class="actions">
-        <button class="up">up</button>
-        <button class="down">down</button>
-      </div>
-      <div class="card next-card">?</div>
-    </div>
-
-    <footer>
-      <p>
-        <span class="label">Step:</span>
-        <span class="step-no">1</span> / <span class="total-steps">51</span>
-      </p>
-    </footer>
-
-  </main>
-
-<!-- 
   <script src="main.js"></script>
-  <script src="game.js"></script> -->
+  <script src="game.js"></script>
 </body>
 
 </html>
